Added some helpers and extension methods
Added actions to be able to add/remove a favourite document

--- a/Training-wmqr/Views/Document/Create.cshtml
+++ b/Training-wmqr/Views/Document/Create.cshtml
@@ -17,7 +17,7 @@
     
         <fieldset>
             <legend>Document</legend>
-            <div>@ViewBag.ErrorMessage</div>
+            @Html.ShowErrorMessage()
             <div class="editor-label">
                 @Html.LabelFor(model => model.Text)
             </div>
