--- a/Training-wmqr/Views/User/Index.cshtml
+++ b/Training-wmqr/Views/User/Index.cshtml
@@ -1,51 +1,35 @@
 ﻿@model IEnumerable<Training_wmqr.Models.User>
 
 @{
-    Layout = null;
+    ViewBag.Title = "Index";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
     <table>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Username)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th></th>
-        </tr>
-    
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Username)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @using (Html.BeginForm("Delete", "User"))
-                {
-                    @Html.Hidden("id", item.Id)
-                    <input type="submit" value="Delete"/>
-                }
-            </td>
-        </tr>
-    }
-    
+        <thead>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Username)</th>
+                <th>@Html.DisplayNameFor(model => model.Email)</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model) {
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Username)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                        @using (Html.BeginForm("Delete", "User"))
+                        {
+                            @Html.Hidden("id", item.Id)
+                            <input type="submit" value="Delete"/>
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
-</body>
-</html>
