--- a/Training-wmqr/Views/Shared/_Layout.cshtml
+++ b/Training-wmqr/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<link rel="stylesheet" href="~/public/css/style.css" media="all">
+    <script src="~/Public/Scripts/Vendor/jquery-1.7.2.js"></script>
+    <script src="/Public/Scripts/Application.js"></script>
 </head>
 <body>
     <div>
