--- a/Training-wmqr/Views/User/Create.cshtml
+++ b/Training-wmqr/Views/User/Create.cshtml
@@ -9,6 +9,11 @@
         <fieldset>
 			<legend>Add User</legend>
 			<label>
+				<span>@Html.LabelFor(model => model.Name):</span>
+				@Html.EditorFor(model => model.Name)
+				<span>@Html.ValidationMessageFor(model => model.Name)</span>
+			</label>
+			<label>
 				<span>@Html.LabelFor(model => model.Username):</span>
 				@Html.EditorFor(model => model.Username)
 				<span>@Html.ValidationMessageFor(model => model.Username)</span>
