--- a/Training-wmqr/Views/Document/Create.cshtml
+++ b/Training-wmqr/Views/Document/Create.cshtml
@@ -10,11 +10,16 @@
         <fieldset>
 			<legend>Add Document</legend>
             @Html.ShowErrorMessage()
-			<label>
-				<span>@Html.LabelFor(model => model.Text):</span>
-				@Html.EditorFor(model => model.Text)
-				<span>@Html.ValidationMessageFor(model => model.Text)</span>
-			</label>
+            <label>
+                <span>@Html.LabelFor(model => model.Title):</span>
+                @Html.EditorFor(model => model.Title)
+                <span>@Html.ValidationMessageFor(model => model.Title)</span>
+            </label>
+            <label>
+                <span>@Html.LabelFor(model => model.Text):</span>
+                @Html.EditorFor(model => model.Text)
+                <span>@Html.ValidationMessageFor(model => model.Text)</span>
+            </label>
 		</fieldset>
 		<button type="submit">Create Document</button>
     }
