--- a/Training-wmqr/Views/Document/Index.cshtml
+++ b/Training-wmqr/Views/Document/Index.cshtml
@@ -7,17 +7,21 @@
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
-    <table>
+    <table class="table table-striped table-bordered">
         <thead>
             <tr>
+                <th>@Html.DisplayNameFor(model => model.Title)</th>
                 <th>@Html.DisplayNameFor(model => model.Text)</th>
+                <th>@Html.DisplayNameFor(model => model.Author)</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model) {
                 <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Title)</td>
                     <td>@Html.DisplayFor(modelItem => item.Text)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Author)</td>
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
                         @Html.ActionLink("Details", "Details", new { id=item.Id }) |
