--- a/Training-wmqr/Views/User/Details.cshtml
+++ b/Training-wmqr/Views/User/Details.cshtml
@@ -3,18 +3,24 @@
 @{
     ViewBag.Title = "Details";
 }
-
-    <fieldset>
-	    <legend>User Details</legend>
-	    <label>
-		    <span>@Html.DisplayNameFor(model => model.Username):</span>
-		    <span>@Html.DisplayFor(model => model.Username)</span>
-	    </label>
-	    <label>
-		    <span>@Html.DisplayNameFor(model => model.Email):</span>
-		    <span>@Html.DisplayFor(model => model.Email)</span>
-	    </label>
-    </fieldset>
+	
+	<table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Name)</th>
+                <th>@Html.DisplayNameFor(model => model.Username)</th>
+                <th>@Html.DisplayNameFor(model => model.Email)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>@Html.DisplayFor(model => model.Name)</td>
+                <td>@Html.DisplayFor(model => model.Username)</td>
+                <td>@Html.DisplayFor(model => model.Email)</td>
+            </tr>
+        </tbody>
+    </table>
+    
     <p>
         @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) | @Html.ActionLink("Back to List", "Index")
     </p>
