--- a/Training-wmqr/Views/User/Index.cshtml
+++ b/Training-wmqr/Views/User/Index.cshtml
@@ -7,9 +7,10 @@
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
-    <table>
+    <table class="table table-striped table-bordered">
         <thead>
             <tr>
+                <th>@Html.DisplayNameFor(model => model.Name)</th>
                 <th>@Html.DisplayNameFor(model => model.Username)</th>
                 <th>@Html.DisplayNameFor(model => model.Email)</th>
                 <th></th>
@@ -18,6 +19,7 @@
         <tbody>
             @foreach (var item in Model) {
                 <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Username)</td>
                     <td>@Html.DisplayFor(modelItem => item.Email)</td>
                     <td>
