--- a/Training-wmqr/Views/User/Details.cshtml
+++ b/Training-wmqr/Views/User/Details.cshtml
@@ -21,6 +21,6 @@
         </tbody>
     </table>
     
-    <p>
+    <div class="form-actions">
         @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) | @Html.ActionLink("Back to List", "Index")
-    </p>
+    </div>
