--- a/Training-wmqr/Public/CSS/style.css
+++ b/Training-wmqr/Public/CSS/style.css
@@ -1,4 +1,4 @@
-html, body {
+/*html, body {
 	width: 100%;
 	height: 100%;
 }
@@ -77,4 +77,8 @@ table th, table td {
 }
 .addToFavSelected:hover {
 	background: url(../images/ui/favUnselected.png) no-repeat 0 0;
+}*/
+legend 
+{
+    display: none;
 }
