--- a/Training-wmqr/Views/Document/Details.cshtml
+++ b/Training-wmqr/Views/Document/Details.cshtml
@@ -11,7 +11,7 @@
                 <th>@Html.DisplayNameFor(model => model.Title)</th>
                 <th>@Html.DisplayNameFor(model => model.Text)</th>
                 <th>Author</th>
-                <th>Favourites</th>
+                <th>Favourited By</th>
             </tr>
         </thead>
         <tbody>
@@ -28,18 +28,21 @@
     {
         using (Html.BeginForm("RemoveFavourite", "Document"))
         {
-            @Html.Hidden("id", Model.Id)
-            <input type="submit" value="un-Favourite"/>
+            <div class="form-actions">
+                @Html.Hidden("id", Model.Id)
+                <button type="submit" class="btn btn-primary">un-Favourite</button>
+                @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) | @Html.ActionLink("Back to List", "Index")
+            </div>
         }
     }
     else{
         using (Html.BeginForm("AddFavourite", "Document"))
-         {
-             @Html.Hidden("id", Model.Id)
-             <input type="submit" value="Favourite"/>
-         }
+            {
+                <div class="form-actions">
+                    @Html.Hidden("id", Model.Id)
+                    <button type="submit" class="btn btn-primary">Favourite</button>
+                @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) | @Html.ActionLink("Back to List", "Index")
+            </div>
+            }
     }
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
+        
