--- a/Training-wmqr/Views/User/Create.cshtml
+++ b/Training-wmqr/Views/User/Create.cshtml
@@ -4,29 +4,35 @@
     ViewBag.Title = "Create";
 }
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form-horizontal" }))
+    {
         @Html.ValidationSummary(true)
         <fieldset>
 			<legend>Add User</legend>
-			<label>
-				<span>@Html.LabelFor(model => model.Name):</span>
-				@Html.EditorFor(model => model.Name)
-				<span>@Html.ValidationMessageFor(model => model.Name)</span>
-			</label>
-			<label>
-				<span>@Html.LabelFor(model => model.Username):</span>
-				@Html.EditorFor(model => model.Username)
-				<span>@Html.ValidationMessageFor(model => model.Username)</span>
-			</label>
-			<label>
-				<span>@Html.LabelFor(model => model.Email):</span>
-				@Html.EditorFor(model => model.Email)
-				<span>@Html.ValidationMessageFor(model => model.Email)</span>
-			</label>
+            <div class="control-group">
+			    @Html.LabelFor(model => model.Name, new { @class = "control-label" })
+                <div class="controls">
+				    @Html.EditorFor(model => model.Name)
+				    <span class="help-block">@Html.ValidationMessageFor(model => model.Name)</span>
+			    </div>
+            </div>
+            <div class="control-group">
+			    @Html.LabelFor(model => model.Username, new { @class = "control-label" })
+                <div class="controls">
+				    @Html.EditorFor(model => model.Username)
+				    <span class="help-block">@Html.ValidationMessageFor(model => model.Username)</span>
+			    </div>
+            </div>
+            <div class="control-group">
+			    @Html.LabelFor(model => model.Email, new { @class = "control-label" })
+                <div class="controls">
+				    @Html.EditorFor(model => model.Email)
+				    <span class="help-block">@Html.ValidationMessageFor(model => model.Email)</span>
+			    </div>
+            </div>
 		</fieldset>
-		<button type="submit">Create User</button>
+        <div class="form-actions">
+    		<button type="submit" class="btn btn-primary">Create User</button>
+            @Html.ActionLink("Back to List", "Index")
+        </div>
     }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
